--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.0
+Date: 2025-12-07
+
+  Bugfixes:
+    - Fixed molten tungsten implementation.
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2025-12-06
 
