--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.1
+Date: 2025-12-07
+
+  Bugfixes:
+    - Fixed crusher unlock recipes
+---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 2025-12-07
 
