--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.2
+Date: 2025-12-08
+
+  Bugfixes:
+    - Fixed incorrect science pack location.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.1
 Date: 2025-12-07
 
